--- a/app/src/main/res/layout-land/barcode_capture.xml
+++ b/app/src/main/res/layout-land/barcode_capture.xml
@@ -12,8 +12,8 @@
 
   <com.google.android.gms.samples.vision.barcodereader.ui.camera.CameraSourcePreview
       android:id="@+id/preview"
-      android:layout_width="667dp"
-      android:layout_height="323dp"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
       android:layout_marginBottom="8dp"
       android:layout_marginEnd="8dp"
       android:layout_marginStart="8dp"
@@ -58,8 +58,8 @@
 
   <ImageView
       android:id="@+id/hudView"
-      android:layout_width="192dp"
-      android:layout_height="108dp"
+      android:layout_width="288dp"
+      android:layout_height="wrap_content"
       android:adjustViewBounds="true"
       android:background="@android:color/transparent"
       app:layout_constraintEnd_toEndOf="@+id/preview"
